# Android-Studio-Lite

./: .gitattributes  .gitignore  HANDOFF.md  LICENSE  PROTOCOL.md  README.md  THIRD-PARTY-NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: pull_request_template.md
.github/workflows/: cd_deploy_to_slack.yml  ci_verify_build.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  asl_env_probe.c  asl_pty.c
build-logic/: settings.gradle.kts
build-logic/conventions/: build.gradle.kts
buildsystem/common/: build.gradle.kts
buildsystem/engine/: build.gradle.kts
core/common/: build.gradle.kts
data/ai/: build.gradle.kts
data/git/: build.gradle.kts
data/local/: build.gradle.kts
data/templates/: build.gradle.kts
designsystem/: build.gradle.kts
docs/build-run/: 00-overview.md  01-jvm-java-kotlin-compilation.md  02-android-build-pipeline.md  03-indexing-and-language-intelligence.md  04-reference-projects-analysis.md  05-recommendation-for-asl.md  06-full-build-production-study.md  07-termux-bootstrap-rebuild.md  08-progress-report.md  09-glossary-from-zero.md  10-full-build-run-gap-and-roadmap.md  11-toolchain-hosting-runbook.md  12-play-in-process-engine.md
domain/: build.gradle.kts
feature/buildrun/: build.gradle.kts
feature/editor/: build.gradle.kts
feature/git/: build.gradle.kts
feature/onboarding/: build.gradle.kts
feature/projects/: build.gradle.kts
feature/settings/: build.gradle.kts
gradle/: libs.versions.toml
tools/: gen_template_thumbnails.py  template_build_check.py
(+1289 files in other folders)
